# ftcemu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  settings.gradle  temp.txt
.devcontainer/: devcontainer.json
TeamCode/: build.gradle
TeamCode/src/main/assets/: readme.md
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: Test.java  readme.md
addon/: Telemetry.java  Test.java
daemon/: launch.py  main.py  terminal.py
daemon/template/: Main.java  Terminal.java  inline.txt
repos/: readme.md
scripts/: build.sh  loadrepo.sh  reset.sh  updaterepo.sh
tui/src/: tui.cpp
